--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,24 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul,
+h1 {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.card-body {
+  display: inline-block;
+  padding: 15px;
+  font-size: 20px;
+}
+.card-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.card-image {
+  margin-right: 10px;
+}
